<resources>
    <string name="app_name">League IQ</string>
    <string name="sort_message">• Sort scoreboard [tab] in the following order: Top, Jg, Mid, Adc, Sup\n\n• Run before every return to shop, e.g. while recalling\n\n• Wards and elixirs not included</string>
    <string name="build_message">You should build the following items:</string>
    <string name="hotkey_message">Press Tab + F12</string>
    <string name="remaining_predictions">You have %s predictions left for today</string>

    <string name="logout">Logout</string>
    <string name="unsub">Unsubscribe</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_unsub">Are you sure you wish to unsubscribe?</string>


    <string name="log_token">Upgrade</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown error</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>


    <!--&lt;!&ndash; Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). &ndash;&gt;-->
    <!--<string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>-->
    <!--<string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->

    <string name="facebook_app_id">318552978963575</string>
    <string name="fb_login_protocol_scheme">fb318552978963575</string>
    <string name="facebook_application_id">318552978963575</string>
    <string name="facebook_login_protocol_scheme">fb318552978963575</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">AUdn9voKiWbTzAfef4pucVnAk</string>
    <string name="twitter_consumer_secret" translatable="false">XSb9f9pGBJ3Xm4VM3tUE3Vqamcsug8JEhBi0wqLG1kxWSshnt6</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="subscribeText">• Unlimited recommendations\n• No Ads\n• Larger item table</string>
    <string name="subscribeButton">Monthly $4.99</string>
    <string name="finePrint">Subscription will renew automatically.</string>
    <string name="title_activity_confirm">ConfirmActivity</string>

</resources>
