<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    tools:context="com.leagueiq.app.MainActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bt_color_primary_dark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/splashImg"
        android:layout_width="241dp"
        android:layout_height="207dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"

        />

    <!--<TextView-->
        <!--android:id="@+id/sortTextView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:gravity="left"-->
        <!--android:text="@string/sort_message"-->
        <!--android:textColor="@color/colorGrayText"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/hotkeyTextView"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/splashImg"-->
        <!--android:visibility="gone"-->
        <!--/>-->


    <TextView
        android:id="@+id/buildText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/build_message"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />


    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="0.75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintTop_toBottomOf="@+id/buildText"
        app:layout_constraintBottom_toTopOf="@+id/recycleView"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:layoutAnimation="@anim/layout_animation_from_bottom"

        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        tools:listitem="@layout/recycle_cell"
        android:visibility="gone"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="0.75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintTop_toBottomOf="@+id/recycleView"
        app:layout_constraintBottom_toTopOf="@+id/hotkeyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/remainingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hotkeyTextView"
        />

    <TextView
        android:id="@+id/hotkeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:text="@string/hotkey_message"
        android:textColor="@color/colorGrayText"
        app:layout_constraintBottom_toTopOf="@+id/subscribeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/log_token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>


</android.support.constraint.ConstraintLayout>
